--- a/FriendFinder/package.json
+++ b/FriendFinder/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "friendfinder",
+  "name": "FriendFinder",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "engines": {
-    "node": "^11.0.0"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^1.19.3"
+    "express": "^4.17.1"
   }
 }
